--- a/main.html
+++ b/main.html
@@ -14,23 +14,22 @@
 		<th>Part</th>
 		<th>XS</th>
 		<th>S</th>
-		<th>L</th>
 		<th>M</th>
+		<th>L</th>
 		<th>XL</th>
 	</tr>
 	</thead>
 	<tbody>
-		<tr>
-		<td>waist</td>	
+	    <tr>
+		<td>Waist</td>	
 		<td>25</td>
 		<td>28</td>
 		<td>30</td>
 		<td>31</td>
 		<td>32</td>
 	</tr>
-	
 		<tr>
-		<td>chest</td>	
+		<td>Chest</td>	
 		<td>34</td>
 		<td>34</td>
 		<td>38</td>
@@ -38,15 +37,15 @@
 		<td>41</td>
 	</tr>
 	
-		<tr>
-		<td>sleeve</td>	
+	<tr>
+		<td>Sleeve</td>	
 		<td>23</td>
 		<td>24</td>
 		<td>24</td>
 		<td>25</td>
 		<td>25</td>
 	</tr>
-	</tbody>
+</tbody>
 </table>
     <script type="text/javascript" src="./script.js">
 </script>
